<resources>

    <string name="ad_id">ca-app-pub-7690257336944861~6434351535</string>
    <string name="ad_top_banner_id">ca-app-pub-7690257336944861/8437698340</string>
    <string name="ad_top_banner_test_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_register_placement_id">257266801836381_257268315169563</string>
    <string name="ad_popular_deck_placement_id">257266801836381_332043187692075</string>
    <string name="ad_rank_placement_id">257266801836381_335890397307354</string>
    <string name="test_device_home_emulator">8450cc6f-f28f-4756-83b2-baec77bece9a</string>
    <string name="test_device_nexus">f1493ebd-c2bf-4cd7-b8d1-d981fb33da1c</string>

    <string name="app_name">ClashRoyalysis</string>
    <string name="register_text">Add Player</string>
    <string name="win_rate_title">Win Rate</string>
    <string name="three_crown_title">3Crown Rate</string>
    <string name="max_trophy">Max Trophy</string>
    <string name="top_trophy">Top Trophy</string>
    <string name="max_trophy_message">The gap from my best score</string>
    <string name="top_trophy_message">The gap from first rank</string>
    <string name="delete_user">Delete User</string>
    <string name="delete_user_ask">Are you delete this user?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="home">Home</string>
    <string name="popular_deck">Deck</string>
    <string name="tag">Tag</string>
    <string name="rank">Rank</string>
    <string name="arena">Arena</string>
    <string name="trophy">Trophy</string>
    <string name="clan">Clan</string>
    <string name="no_data">No Data</string>
    <string name="no_clan">have no clans</string>
    <string name="upcoming_chests">Upcoming Chests</string>
    <string name="next">next</string>
    <string name="sponsored">Sponsored</string>
    <string name="refresh_now">Refresh Now</string>
</resources>
