<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TabLayout
        android:id="@+id/fragment_tab_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        app:tabSelectedTextColor="@color/colorPrimary"
        app:tabIndicatorColor="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.design.widget.TabItem
            android:id="@+id/fragment_tab_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/home"
            android:tag="home"/>

        <android.support.design.widget.TabItem
            android:id="@+id/fragment_tab_popular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/popular_deck"
            android:tag="deck"/>

        <android.support.design.widget.TabItem
            android:id="@+id/fragment_tab_rank"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rank"
            android:tag="rank"/>

    </android.support.design.widget.TabLayout>
    <!--<TextView
        android:id="@+id/fragment_tab_register"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/home"/>

    <TextView
        android:id="@+id/fragment_tab_popular"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/popular_deck"/>

    <TextView
        android:id="@+id/fragment_tab_top_player"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/rank"/>-->

</android.support.constraint.ConstraintLayout>