<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/profile_user_rank_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rank"
            android:textSize="20dp"
            android:textColor="@color/defaultColor"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/profile_user_trophy_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/profile_user_rank"/>

        <TextView
            android:id="@+id/profile_user_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/defaultColor"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@id/profile_user_rank_title"
            app:layout_constraintBottom_toBottomOf="@id/profile_user_rank_title"
            app:layout_constraintLeft_toRightOf="@id/profile_user_rank_title"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/profile_user_trophy_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/trophy"
            android:textSize="20dp"
            android:textColor="@color/defaultColor"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/profile_user_rank_title"
            app:layout_constraintBottom_toTopOf="@+id/profile_user_arena_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/profile_user_trophy"/>

        <TextView
            android:id="@+id/profile_user_trophy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/defaultColor"
            android:textSize="20dp"
            android:gravity="left|center_vertical"
            app:layout_constraintLeft_toRightOf="@id/profile_user_trophy_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/profile_user_trophy_title"
            app:layout_constraintBottom_toBottomOf="@id/profile_user_trophy_title"/>

        <TextView
            android:id="@+id/profile_user_arena_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/arena"
            android:textSize="20dp"
            android:textColor="@color/defaultColor"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/profile_user_trophy_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/profile_user_arena"/>

        <TextView
            android:id="@+id/profile_user_arena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/defaultColor"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@id/profile_user_arena_title"
            app:layout_constraintBottom_toBottomOf="@id/profile_user_arena_title"
            app:layout_constraintLeft_toRightOf="@id/profile_user_arena_title"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/profile_user_clan_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/clan"
            android:textSize="20dp"
            android:textColor="@color/defaultColor"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/profile_user_arena_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/profile_user_clan_img"/>

        <ImageView
            android:id="@+id/profile_user_clan_img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toTopOf="@id/profile_user_clan_title"
            app:layout_constraintBottom_toBottomOf="@id/profile_user_clan_title"
            app:layout_constraintLeft_toRightOf="@id/profile_user_clan_title"
            app:layout_constraintRight_toLeftOf="@id/profile_user_clan_name" />

        <TextView
            android:id="@+id/profile_user_clan_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/defaultColor"
            android:gravity="left|center_vertical"
            app:layout_constraintTop_toTopOf="@id/profile_user_clan_title"
            app:layout_constraintBottom_toBottomOf="@id/profile_user_clan_title"
            app:layout_constraintLeft_toRightOf="@id/profile_user_clan_img"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
