<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/trophy_info_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/trophy"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/defaultColor"
            android:gravity="left|center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/trophy_info_sub_title_max"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/trophy_info_sub_title_max"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/max_trophy_message"
            android:textSize="15dp"
            android:gravity="left|center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@id/trophy_info_title"
            app:layout_constraintBottom_toTopOf="@+id/trophy_info_max_progress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <ProgressBar
            android:id="@+id/trophy_info_max_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:progressDrawable="@drawable/style_progressbar1"
            android:max="100"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/trophy_info_sub_title_max"
            app:layout_constraintBottom_toTopOf="@+id/trophy_info_sub_title_top"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/trophy_info_max_trophy"
            app:layout_constraintHorizontal_weight="4"/>

        <TextView
            android:id="@+id/trophy_info_max_trophy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="@id/trophy_info_max_progress"
            app:layout_constraintBottom_toBottomOf="@id/trophy_info_max_progress"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/trophy_info_max_progress"
            app:layout_constraintHorizontal_weight="1"/>

        <TextView
            android:id="@+id/trophy_info_max_no_data"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/progress_round_bg"
            android:text="@string/no_data"
            android:textColor="@color/defaultColor"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="@id/trophy_info_max_progress"
            app:layout_constraintBottom_toBottomOf="@id/trophy_info_max_progress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/trophy_info_sub_title_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/top_trophy_message"
            android:textSize="15dp"
            android:gravity="left|center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@id/trophy_info_max_progress"
            app:layout_constraintBottom_toTopOf="@+id/trophy_info_top_progress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <ProgressBar
            android:id="@+id/trophy_info_top_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:progressDrawable="@drawable/style_progressbar1"
            android:max="100"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/trophy_info_sub_title_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/trophy_info_top_trophy"
            app:layout_constraintHorizontal_weight="4"/>

        <TextView
            android:id="@+id/trophy_info_top_trophy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="@id/trophy_info_top_progress"
            app:layout_constraintBottom_toBottomOf="@id/trophy_info_top_progress"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/trophy_info_top_progress"
            app:layout_constraintHorizontal_weight="1"/>

        <TextView
            android:id="@+id/trophy_info_top_no_data"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/progress_round_bg"
            android:text="@string/no_data"
            android:textColor="@color/defaultColor"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="@id/trophy_info_top_progress"
            app:layout_constraintBottom_toBottomOf="@id/trophy_info_top_progress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>